04-hw/manifest/deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deploy
  namespace: default
  labels:
    app: user-service
spec:
  # Минимум 2 реплики требованию ДЗ
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: kornakovkv/otus-user-service:v1
          # Переменные окружения из ConfigMap и Secret
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5  # Ждать 5 сек после старта
            periodSeconds: 10       # Проверять каждые 10 сек
            failureThreshold: 3     # 3 неудачи = перезапуск
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 3
          resources:
            requests:
              cpu: "1"
              memory: "1Gi"
            limits:
              cpu: "1"
              memory: "2Gi"
