04-hw/manifest/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service-svc
  namespace: default
  labels:
    app: user-service
spec:
  selector:
    app: user-service
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8000
